apps/development/stac/stac-fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stac-fastapi
  namespace: stac
spec:
  template:
    spec:
      containers:
        - name: stac-fastapi
