apps/development/stac/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stac-ingress
  namespace: odc-stac
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: stac.dev.pik-sel.id
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
    - host: stac.dev.pik-sel.id
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stac-fastapi
                port:
                  number: 8080
    - host: stac-browser.dev.pik-sel.id
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stac-browser
                port:
                  number: 8080
  tls:
    - hosts:
        - stac.dev.pik-sel.id
        - stac-browser.dev.pik-sel.id
      secretName: stac-ingress
