apps/development/stac/stac-fastapi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stac-ingress
  namespace: stac
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: stac.staging.example.com
spec:
  ingressClassName: nginx
  rules:
    - host: stac.staging.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stac-fastapi
                port:
                  number: 8080
    - host: stac-browser.staging.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: stac-browser
                port:
                  number: 8080
  tls:
    - hosts:
        - stac.staging.example.com
        - stac-browser.staging.example.com
      secretName: stac-ingress
